qualia_derive/tests/compile-fail/no-unions.rs
extern crate qualia_derive;
use qualia_derive::ObjectShape;

#[derive(ObjectShape)]
union Foo {
    a: i64,
}

fn main() {}
