qualia_derive/tests/compile-fail/no-unions.stderr
error: can only derive ObjectShape on a struct
 --> $DIR/no-unions.rs:5:1
  |
5 | union Foo {
  | ^^^^^
